test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_extern_proc.draco
extern a() void;

proc main() void : a := a; corp;


