test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_default_as_identifier.draco
int default;
 
proc main() void : a := 1; corp;
